crates/kula-core/tests/snapshots/validator__rule_05_reason_without_end.snap
---
source: crates/kula-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KULA-R05 [127..145]: marriage `m_alice_bob` has `end_reason` without `end`; remove this field or add a matching `end:` date
