crates/kula-core/tests/snapshots/validator__rule_06_died_before_born.snap
---
source: crates/kula-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KULA-R06 [49..59]: person `zombie` died before they were born
  related [33..43]: born here
