crates/kula-core/tests/snapshots/validator__rule_07_marriage_end_before_start.snap
---
source: crates/kula-core/tests/validator.rs
expression: render_diagnostics(&result.diagnostics)
---
KULA-R07 [131..141]: marriage `m_alice_bob` ended before it began
  related [116..126]: started here
